# glue-qt

./: .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  CHANGES.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: check_failures.py  ci_workflows.yml
doc/: conf.py  faq.rst  index.rst  known_issues.rst  videos.rst
doc/_templates/: layout.html
doc/customizing_guide/: available_plugins.rst  custom_viewer.rst  customization.rst  full_custom_qt_viewer.rst  matplotlib_qt_viewer.rst  qt_viewer.rst  toolbar.rst  viewer.rst  writing_plugin.rst
doc/customizing_guide/mpl_viewer/: config.py
doc/customizing_guide/scripts/: bball_viewer_class.py  emcee_plugin.py
doc/customizing_guide/state_viewer/: config.py
doc/developer_guide/: api.rst  coding_guidelines.rst  organization.rst  random_data.py  selection.rst  testing.rst
doc/getting_started/images/: make_screenshots.py
doc/gui_guide/: 3d_viewers.rst  slice.rst
doc/installation/: conda.rst  developer.rst  installation.rst  pip.rst  standalone.rst
doc/python_guide/: data_viewer_options.rst  glue_from_python.rst  ipython_terminal.rst
doc/python_guide/scripts/: w5.py
doc/whatsnew/: 0.7_code_reorganization.rst  whatsnew.rst
glue_qt/: __init__.py  backends.py  config.py  conftest.py  main.py  qglue.py
glue_qt/app/: actions.py  application.py  edit_subset_mode_toolbar.py  feedback.py  keyboard_shortcuts.py  layer_tree_widget.py  layer_tree_widget.ui  mdi_area.py  metadata.py  plugin_manager.py  preferences.py  preferences.ui  save_data.py  splash_screen.py  terminal.py  versions.py
glue_qt/app/qt/: application.py  feedback.py  keyboard_shortcuts.py  layer_tree_widget.py  metadata.py  preferences.py  preferences.ui  save_data.py  terminal.py  versions.py
glue_qt/app/qt/tests/: test_application.py  test_layer_tree_widget.py  test_preferences.py  test_save_data.py  test_terminal.py
glue_qt/app/tests/: test_application.py  test_layer_tree_widget.py  test_preferences.py  test_save_data.py  test_terminal.py
glue_qt/core/: data_collection_model.py  dialogs.py  fitters.py  layer_artist_model.py  message_widget.py  mime.py  style_dialog.py
glue_qt/core/qt/: message_widget.py  mime.py  style_dialog.py
glue_qt/core/tests/: test_data_collection_model.py  test_layer_artist_model.py
glue_qt/dialogs/autolinker/: __init__.py  autolinker.py
glue_qt/dialogs/autolinker/tests/: test_autolinker.py
glue_qt/dialogs/component_arithmetic/: component_arithmetic.py  component_arithmetic.ui  equation_editor.py  equation_editor.ui
glue_qt/dialogs/component_arithmetic/qt/: component_arithmetic.ui  equation_editor.py  equation_editor.ui
glue_qt/dialogs/component_manager/: component_manager.py  component_manager.ui
glue_qt/dialogs/component_manager/tests/: test_component_manager.py
glue_qt/dialogs/data_wizard/: data_wizard_dialog.py
glue_qt/dialogs/data_wizard/qt/: data_wizard_dialog.py
glue_qt/dialogs/data_wizard/tests/: test_data_wizard.py
glue_qt/dialogs/link_editor/: data_graph.py  link_editor.py  link_editor_widget.ui
glue_qt/dialogs/link_editor/qt/: data_graph.py
glue_qt/dialogs/link_editor/tests/: test_link_editor.py
glue_qt/dialogs/subset_facet/: subset_facet.py  subset_facet.ui
glue_qt/dialogs/subset_facet/tests/: test_subset_facet.py
glue_qt/icons/: helpers.py
glue_qt/icons/qt/: helpers.py
glue_qt/io/: subset_mask.py
glue_qt/io/directory_importer/: directory_importer.py
glue_qt/io/tests/: test_subset_mask.py
glue_qt/plugins/dendro_viewer/: data_viewer.py  layer_style_editor.py  layer_style_editor.ui  options_widget.py
glue_qt/plugins/dendro_viewer/qt/: __init__.py  data_viewer.py  layer_style_editor.py
glue_qt/plugins/dendro_viewer/tests/: test_data_viewer.py
glue_qt/plugins/tools/: __init__.py
glue_qt/plugins/tools/pv_slicer/: __init__.py  pv_slicer.py
glue_qt/tests/: helpers.py  test_session_back_compat.py
glue_qt/utils/: app.py  colors.py  decorators.py  dialogs.py  helpers.py  mixins.py
glue_qt/utils/qt/: colors.py
glue_qt/utils/qt/tests/: test_dialogs.py
glue_qt/utils/tests/: test_colors.py  test_decorators.py  test_dialogs.py
glue_qt/viewers/common/: base_widget.py  data_slice_widget.py  data_viewer.py  data_viewer_with_state.py  slice_widget.py  tool.py  toolbar.py  tools.py
glue_qt/viewers/common/qt/: data_viewer.py  toolbar.py  tools.py
glue_qt/viewers/common/tests/: test_data_viewer.py  test_multi_slice_helper.py  test_toolbar.py
glue_qt/viewers/custom/: custom_viewer.py
glue_qt/viewers/custom/qt/: custom_viewer.py
glue_qt/viewers/custom/tests/: test_custom_viewer.py  test_elements.py
glue_qt/viewers/histogram/: __init__.py  data_viewer.py  layer_artist.py  layer_style_editor.py  layer_style_editor.ui  options_widget.py  options_widget.ui
glue_qt/viewers/histogram/qt/: layer_style_editor.py  options_widget.py  options_widget.ui
glue_qt/viewers/histogram/tests/: test_data_viewer.py  test_python_export.py
glue_qt/viewers/image/: data_viewer.py  layer_style_editor.py  layer_style_editor.ui  layer_style_editor_subset.py  layer_style_editor_subset.ui  options_widget.py  options_widget.ui  profile_viewer_tool.py  slice_widget.py  standalone_image_viewer.py
glue_qt/viewers/image/qt/: __init__.py  data_viewer.py  layer_style_editor_subset.py  layer_style_editor_subset.ui  options_widget.ui  profile_viewer_tool.py  standalone_image_viewer.py
glue_qt/viewers/image/tests/: test_data_viewer.py  test_display_region_data.py  test_python_export.py  test_regression.py
glue_qt/viewers/matplotlib/: __init__.py  axes_editor.py  data_viewer.py  legend_editor.py  legend_editor.ui  toolbar_mode.py
glue_qt/viewers/profile/: data_viewer.py  layer_artist.py  layer_style_editor.py  layer_style_editor.ui  mouse_mode.py  options_widget.py  options_widget.ui  profile_tools.py
glue_qt/viewers/profile/qt/: __init__.py  (+4 more)
glue_qt/viewers/scatter/: data_viewer.py  layer_style_editor.py  layer_style_editor.ui  options_widget.py  options_widget.ui  region_layer_style_editor.ui
glue_qt/viewers/table/: __init__.py  data_viewer.py  data_viewer.ui
(+26 files in other folders)
